src/objects/SharingOpportunity__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>NCUserCode__c</fullName>
        <label>用户编码</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <inlineHelpText>多个产品线信息需要以逗号隔开。如：OPTOS,SCHWIND,LENSAR,LUNEAU。务必保证数据的准确性。</inlineHelpText>
        <label>产品线</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>省份信息需要以逗号隔开。如： 	重庆市,四川省,贵州省,云南省,西藏自治区。如果是全国的话，请输入: 全国。务必保证数据的准确性</inlineHelpText>
        <label>对应的区域</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>共享销售机会</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductLine__c</columns>
        <columns>Region__c</columns>
        <columns>NCUserCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>